# T-Countdown

./: .gitignore  README.md  RELEASE_NOTES.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.js
src/: App.vue  global.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  desktop_embed.rs  lib.rs  main.rs  models.rs  storage.rs  system.rs  webdav.rs
src/components/: AddItemForm.vue  CountdownItem.vue  PrivacyOverlay.vue  SettingsPanel.vue  SyncPanel.vue
src/composables/: useCountdownItems.ts  usePrivacyMode.ts  useWindowState.ts
src/constants/: app.ts
src/services/: dataService.ts  proxyService.ts  storageService.ts  syncService.ts  systemService.ts  updateService.ts
src/types/: countdown.ts
